# cython_coverage_demo

./: .gitignore  README.md  README.rst  cfile.patch  clean.sh  coverage_meson.sh  coverage_setuptools.sh  cython.patch  meson.build  pyproject.toml  requirements.txt  setup.py
src/stuff/: meson.build  test_thing.py  thing.pyx
